# beerxml-python

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: main.yaml
beerxml/: __init__.py  beerxml_handler.py  beerxml_parser.py  equipment.py  fermentable.py  hop.py  mash.py  misc.py  models.py  recipe.py  style.py  water.py  yeast.py
tests/: test_beerxml_handler.py  test_parse_invalid.py  test_parse_valid.py
tests/assets/: Almtaler Weizen.xml  IPL_COMET.xml
tests/assets/invalid/equipment/: invalid_batch_size.xml  invalid_boil_size.xml  invalid_boil_time.xml  invalid_calc_boil_volume.xml  invalid_evap_rate.xml  invalid_hop_utilization.xml  invalid_lauter_deadspace.xml  invalid_top_up_kettle.xml  invalid_top_up_water.xml  invalid_trub_chiller_loss.xml  invalid_tun_specific_heat.xml  invalid_tun_volume.xml  invalid_tun_weight.xml
tests/assets/invalid/fermentable/: invalid_amount.xml  invalid_color.xml  invalid_type.xml  invalid_version.xml  invalid_yield.xml
tests/assets/invalid/hop/: invalid_alpha.xml  invalid_amount.xml  invalid_form.xml  invalid_time.xml  invalid_type.xml  invalid_use.xml
tests/assets/valid/: hop_single.xml
tests/invalid/: test_parse_equipment.py  test_parse_fermentable.py  test_parse_hop.py  test_parse_mash_step.py  test_parse_misc.py  test_parse_recipe.py  test_parse_style.py  test_parse_water.py  test_parse_yeast.py
tests/valid/: test_parse_equipment.py  test_parse_fermentable.py  test_parse_hop.py  test_parse_mash_step.py  test_parse_recipe.py  test_parse_style.py  test_parse_water.py  test_parse_yeast.py
(+123 files in other folders)
